# patch-bridge

./: .envrc  .guix-channel  .zenodo.json  0-AI-MANIFEST.a2ml  Cargo.toml  Containerfile  EXPLAINME.adoc  Justfile  PROOF-NEEDS.md  README.adoc  README.adoc.invariants.md  ROADMAP.adoc  TEST-NEEDS.md  TOPOLOGY.md  eclexiaiser.toml  flake.nix  guix.scm  k9iser.toml
.devcontainer/: Containerfile  README.adoc  devcontainer.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  SECURITY.md  SUPPORT  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  custom.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: boj-build.yml  hypatia-scan.yml  openssf-compliance.yml  release.yml  scorecard-enforcer.yml  static-analysis-gate.yml  wellknown-enforcement.yml
.machine_readable/: ECOSYSTEM.a2ml  ENSAID_CONFIG.a2ml  META.a2ml  STATE.a2ml
.machine_readable/6a2/: AGENTIC.a2ml  ECOSYSTEM.a2ml  STATE.a2ml
.machine_readable/agent_instructions/: coverage.a2ml  debt.a2ml  methodology.a2ml
.machine_readable/ai/: PLACEHOLDERS.adoc
.machine_readable/anchors/: ANCHOR.a2ml
.machine_readable/integrations/: groove.a2ml
.well-known/: security.txt
.well-known/groove/: manifest.json
benches/: bridge_bench.rs
container/: .gatekeeper.yaml  Containerfile  README.adoc  compose.toml  ct-build.sh  deploy.k9.ncl  entrypoint.sh  manifest.toml  vordr.toml
docs/: STATE-VISUALIZER.adoc  patch-bridge-design.md
docs/architecture/: THREAT-MODEL.adoc
src/: lib.rs  main.rs
tests/: aspect_test.rs  e2e_test.rs  property_test.rs
(+24 files in other folders)
