# SPDX-License-Identifier: PMPL-1.0-or-later
[package]
name = "patch-bridge"
version = "0.1.0"
description = "CVE mitigation lifecycle — from disclosure to verified remediation with reachability analysis (formal soundness proofs pending)"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
license = "PMPL-1.0-or-later"
repository = "https://github.com/hyperpolymath/patch-bridge"
edition = "2021"
rust-version = "1.75"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
semver = "1"
anyhow = "1.0"
walkdir = "2"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "bridge_bench"
harness = false
